updated links for index.html portfolio.html contact.html files

--- a/contact.html
+++ b/contact.html
@@ -21,9 +21,9 @@
             
         <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-item nav-link active text-secondary float-right" href="/Users/Skimble/Documents/BootCamp/Week 1/Homework submit/Bootstrap-Portfolio/index.html">About<span class="sr-only">(current)</span></a>
-                <a class="nav-item nav-link text-secondary" href="/Users/Skimble/Documents/BootCamp/Week 1/Homework submit/Bootstrap-Portfolio/portfolio.html">Portfolio</a>
-                <a class="nav-item nav-link text-info" href="/Users/Skimble/Documents/BootCamp/Week 1/Homework submit/Bootstrap-Portfolio/contact.html">Contact</a>
+                <a class="nav-item nav-link active text-secondary float-right" href="index.html">About<span class="sr-only">(current)</span></a>
+                <a class="nav-item nav-link text-secondary" href="portfolio.html">Portfolio</a>
+                <a class="nav-item nav-link text-info" href="contact.html">Contact</a>
             </div>
         </div>
     </nav>
